This is video calling software.

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 </head>   
 <body>
 <div width = 100% class = header><pre><center>
-<a href="Index.html">Ditch Link</a>     <a href="Sign.html">Sign In</a>     <a href="sh.html">Support</a>     <a href="cost.html">Pricing</a>
+<a href="index.html">Ditch Link</a>     <a href="Sign.html">Sign In</a>     <a href="sh.html">Support</a>     <a href="cost.html">Pricing</a>
 <br></center></pre></div>
     <center><img src="meet.jpg" id="bigPix" width="50%" height="65%"></center><br>
 
