--- a/cost.html
+++ b/cost.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div width = 100% class = "div-header"><pre><center>
-<a href="Index.html">Ditch Link</a>     <a href="Sign.html">Sign In</a>     <a href="sh.html">Support</a>     <a href="cost.html">Pricing</a>
+<a href="index.html">Ditch Link</a>     <a href="Sign.html">Sign In</a>     <a href="sh.html">Support</a>     <a href="cost.html">Pricing</a>
 <br></center></pre></div>
         <section class="section section-costing">
             <div class="scheme">
