--- a/sh.html
+++ b/sh.html
@@ -7,7 +7,7 @@
     <body>
         <center>
         <div width = 100% class = header><pre><center>
-<a href="Index.html" class="navlink">Ditch Link</a>     <a href="Sign.html" class="navlink">Sign In</a>     <a href="sh.html" class="navlink">Support</a>     <a href="cost.html" class="navlink">Pricing</a>
+<a href="index.html" class="navlink">Ditch Link</a>     <a href="Sign.html" class="navlink">Sign In</a>     <a href="sh.html" class="navlink">Support</a>     <a href="cost.html" class="navlink">Pricing</a>
 <br></center></pre></div>
         <section class="heading">
             <h1>Help Centre</h1>
